# QZip

./: README.md  temp.emmx
3d_surface_tool/: CMakeLists.txt  main.cpp  scene.cpp  scene.h  surface.ui  viewer.cpp  viewer.h  window.cpp  window.h
include/: console_color.h  include_opengl.h  meta_types.h  nanoflann.hpp
quad/: CMakeLists.txt  oracle.cpp  oracle.h  oracle_polyhedron3.cpp  oracle_polyhedron3.h  quad.cpp  quad.h  quad_operations.cpp  quad_options.cpp  quad_options.h  quad_options.ui  quad_render.cpp  quad_smooth.cpp  quad_zipper_tools.cpp  read_obj.cpp  read_obj.h
tools/: CMakeLists.txt  gl_text.cpp  gl_text.h  gl_tools.h  kd_tree.cpp  kd_tree.h  kd_tree_3d.h  materials.cpp  materials.h  ramp.cpp  ramp.h  scope_timer.cpp  scope_timer.h
